z-index loader fixed

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -310,63 +310,56 @@ footer a i {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: loading 3s ease-in;
+  animation: loading 3s ease-in-out forwards;
 }
-.loader-container .loader {
+
+.loader {
   position: absolute;
   height: 200px;
   width: 200px;
   border: 5px solid transparent;
   border-top-color: #9356DC;
   border-radius: 50%;
-  animation: spin 3s linear forwards;
+  animation: spin 3s ease-in-out forwards;
 }
-.loader-container .loader:before, .loader-container .loader:after {
+.loader:before, .loader:after {
   content: "";
   position: absolute;
   border: 5px solid transparent;
   border-radius: 50%;
 }
-.loader-container .loader:before {
+.loader:before {
   border-top-color: #FF79DA;
   top: -20px;
   left: -20px;
   right: -20px;
   bottom: -20px;
-  animation: spin 3s linear;
+  animation: spin 3s ease-in-out;
 }
-.loader-container .loader:after {
+.loader:after {
   border-top-color: #99E2D0;
   top: 10px;
   left: 10px;
   right: 10px;
   bottom: 10px;
-  animation: spin 3s linear;
+  animation: spin 3s ease-in-out;
 }
 
 @keyframes loading {
   0% {
     background-color: #ffffff;
-    opacity: 1;
-  }
-  99% {
-    opacity: 1;
+    z-index: 9999;
   }
   100% {
-    opacity: 0;
+    z-index: -1;
   }
 }
 @keyframes spin {
   0% {
-    opacity: 1;
     transform: rotate(0deg);
-  }
-  70% {
-    opacity: 1;
   }
   100% {
     transform: rotate(360deg);
