--- a/sass/layout/_loader.scss
+++ b/sass/layout/_loader.scss
@@ -2,66 +2,69 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: loading 3s ease-in;
-  .loader {
+  animation: loading 3s ease-in-out forwards;
+
+}
+
+.loader {
+  position: absolute;
+  height: 200px;
+  width: 200px;
+  border: 5px solid transparent;
+  border-top-color: $primary;
+  border-radius: 50%;
+  animation: spin 3s ease-in-out forwards;
+  &:before, 
+  &:after {
+    content:'';
     position: absolute;
-    height: 200px;
-    width: 200px;
     border: 5px solid transparent;
-    border-top-color: $primary;
-    // margin: -30px;
     border-radius: 50%;
-    animation: spin 3s linear forwards;
-    &:before, &:after {
-      content:'';
-      position: absolute;
-      border: 5px solid transparent;
-      border-radius: 50%;
-    }
-    &:before {
-      border-top-color: $secondary;
-      top: -20px;
-      left: -20px;
-      right: -20px;
-      bottom: -20px;
-      animation: spin 3s linear;
-    }
-    &:after {
-      border-top-color: $tertiary;
-      top: 10px;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;  
-      animation: spin 3s linear;
-    }
+  }
+  &:before {
+    border-top-color: $secondary;
+    top: -20px;
+    left: -20px;
+    right: -20px;
+    bottom: -20px;
+    animation: spin 3s ease-in-out;
+  }
+  &:after {
+    border-top-color: $tertiary;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;  
+    animation: spin 3s ease-in-out;
   }
 }
 
 @keyframes loading {
   0% {
     background-color: #ffffff;
-    opacity: 1;
+    // opacity: ;
+    z-index: 9999;
   }
   99% {
-    opacity: 1;
+    // opacity: 1;
   }
   100% {
-    opacity: 0;
+    // opacity: 0;
+    z-index: -1;
   }
 }
 
 @keyframes spin {
   0% {
-    opacity: 1;
+    // opacity: 1;
     transform: rotate(0deg);
   }
 
   70% {
-    opacity: 1;
+    // opacity: 1;
   }
 
   100% {
